--- a/dotfiles/ubuntu-1604/.tmux.conf
+++ b/dotfiles/ubuntu-1604/.tmux.conf
@@ -26,17 +26,8 @@ bind r source-file ~/.tmux.conf \; display 'Reloaded!'
 # We can send CTRL+A to vim, bash, etc by pressing the PREFIX twice
 bind C-a send-prefix
 
-# Make mouse useful in copy mode
-setw -g mode-mouse on
-
-# Allow mouse to select which pane to use
-set -g mouse-select-pane on
-
-# Allow mouse dragging to resize panes
-set -g mouse-resize-pane on
-
-# Allow mouse to select windows
-set -g mouse-select-window on
+# Enable mouse mode
+set -g mouse on
 
 # Scroll History
 set -g history-limit 50000
