--- a/dotfiles/macos/current/.gitconfig
+++ b/dotfiles/macos/current/.gitconfig
@@ -1,6 +1,7 @@
 [alias]
   br = branch -av
   rt = remote -v
+  up = remote update
 [user]
   email = chyld.medford@gmail.com
   name = Chyld Medford
