--- a/dotfiles/c9/.gitconfig
+++ b/dotfiles/c9/.gitconfig
@@ -1,8 +1,7 @@
 [alias]
-  st = status -s
-  lg = log --oneline --decorate --all --graph
   br = branch -av
   rt = remote -v
+  up = remote update
 [user]
   email = chyld.medford@gmail.com
   name = Chyld Medford
