--- a/dotfiles/macos/current/vscode/settings.json
+++ b/dotfiles/macos/current/vscode/settings.json
@@ -9,10 +9,21 @@
     "window.zoomLevel": 0,
     "editor.minimap.enabled": true,
     "files.trimTrailingWhitespace": true,
-    "workbench.colorTheme": "Hopscotch (TextMate Theme)",
     "workbench.startupEditor": "newUntitledFile",
+
     "editor.tabSize": 2,
+    "editor.insertSpaces": true,
+
+    "[javascript]": {
+      "editor.tabSize": 2,
+      "editor.insertSpaces": true
+    },
     "[python]": {
-        "editor.tabSize": 4
+      "editor.tabSize": 2,
+      "editor.insertSpaces": true
+    },
+    "[go]": {
+      "editor.tabSize": 2,
+      "editor.insertSpaces": true
     }
 }
