--- a/dotfiles/vagrant/current/.gitconfig
+++ b/dotfiles/vagrant/current/.gitconfig
@@ -3,6 +3,7 @@
   rt = remote -v
   up = remote update
   acm = !git add . && git commit -m
+  s = status
 [user]
   email = chyld.medford@gmail.com
   name = Chyld Medford
