--- a/dotfiles/macos/current/.gitconfig
+++ b/dotfiles/macos/current/.gitconfig
@@ -2,6 +2,8 @@
   br = branch -av
   rt = remote -v
   up = remote update
+  acm = !git add . && git commit -m
+  s = status
 [user]
   email = chyld.medford@gmail.com
   name = Chyld Medford
@@ -14,3 +16,4 @@
   autocrlf = input # true for windows
 [color]
   ui = true
+
