--- a/platforms/ubuntu-18-04/vscode-settings.json
+++ b/platforms/ubuntu-18-04/vscode-settings.json
@@ -1,16 +1,15 @@
 {
-  // ubuntu specific
   "window.menuBarVisibility": "toggle",
-  // different than macos
   "editor.fontSize": 14,
-  // shared with macos
   "workbench.startupEditor": "newUntitledFile",
   "editor.minimap.enabled": false,
   "editor.fontFamily": "'Fira Code', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontLigatures": true,
   "window.zoomLevel": 0,
   "editor.formatOnSave": true,
-  "python.formatting.autopep8Args": ["--max-line-length=200"],
+  "python.formatting.autopep8Args": [
+    "--max-line-length=200"
+  ],
   "explorer.openEditors.visible": 0,
   "extensions.showRecommendationsOnlyOnDemand": true
 }
