--- a/platforms/macos/.gitconfig
+++ b/platforms/macos/.gitconfig
@@ -1,17 +1,19 @@
 [alias]
-  br = branch -av
-  rt = remote -v
-  up = remote update
-  s = status -sb
+  br  = branch -avv
+  rt  = remote -v
+  up  = remote update
+  s   = status -sb
+  acp = !git add . && git commit -am \"$1\" && git push && git status
+  l   = !git --no-pager log --oneline --decorate --graph -10
 [user]
   email = chyld.medford@gmail.com
-  name = Chyld Medford
+  name  = Chyld Medford
 [push]
   default = simple
 [credential]
   helper = cache --timeout=86400
 [core]
-  editor = vim
+  editor   = vim
   autocrlf = input
 [color]
   ui = true
