--- a/platforms/mint-ubuntu/v005/.mypy.ini
+++ b/platforms/mint-ubuntu/v005/.mypy.ini
@@ -1,16 +1,24 @@
 [mypy]
-python_version = 3.6
-disallow_any_unimported = True
-disallow_any_expr = True
-disallow_any_decorated = True
-disallow_any_explicit = True
-disallow_any_generics = True
-disallow_subclassing_any = True
+python_version = 3.7
+warn_unused_configs = True
+
+warn_unused_ignores = True
+warn_no_return = True
+warn_return_any = True
+
+no_implicit_optional = True
+strict_optional = True
+
 disallow_untyped_calls = True
 disallow_untyped_defs = True
 disallow_incomplete_defs = True
 check_untyped_defs = True
 disallow_untyped_decorators = True
-warn_unused_ignores = True
-warn_no_return = True
-warn_return_any = True
+
+disallow_any_unimported = True
+disallow_any_expr = False
+disallow_any_decorated = True
+disallow_any_explicit = False
+disallow_any_generics = True
+disallow_subclassing_any = True
+
