--- a/platforms/docker-python-node-workstation/Dockerfile
+++ b/platforms/docker-python-node-workstation/Dockerfile
@@ -8,7 +8,7 @@ RUN apt-get update
 RUN apt-get install -y apt-utils
 RUN apt-get install -y \
 	wget curl htop tree build-essential neofetch tmux \
-	sqlite3 silversearcher-ag software-properties-common locales sudo
+	sqlite3 silversearcher-ag software-properties-common locales sudo unzip
 
 # Locales
 RUN locale-gen en_US.UTF-8  
@@ -20,10 +20,17 @@ ENV LC_ALL en_US.UTF-8
 RUN add-apt-repository ppa:git-core/ppa -y && add-apt-repository ppa:jonathonf/vim -y
 RUN apt-get update && apt-get install -y git vim
 
-# Extra
+# Download directory
 WORKDIR /tmp
-RUN wget https://github.com/sharkdp/bat/releases/download/v0.10.0/bat_0.10.0_amd64.deb
-RUN apt-get install ./bat_0.10.0_amd64.deb
+
+# Bat
+RUN wget https://github.com/sharkdp/bat/releases/download/v0.10.0/bat_0.10.0_amd64.deb && \
+	apt-get install ./bat_0.10.0_amd64.deb
+
+# Exa
+RUN wget https://github.com/ogham/exa/releases/download/v0.8.0/exa-linux-x86_64-0.8.0.zip   && \
+   	unzip exa-linux-x86_64-0.8.0.zip                                                        && \
+   	mv exa-linux-x86_64 /usr/local/bin/exa
 
 # Create user
 RUN useradd -ms /bin/bash europa && usermod -aG sudo europa && echo "europa:europa" | chpasswd
@@ -31,16 +38,17 @@ USER europa
 WORKDIR /home/europa
 
 # Dotfiles
-RUN wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.gitconfig       && \
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.tmux.conf       && \	
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.vimrc           && \
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.bash_aliases    && \	
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.bash_colors     && \
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.bash_env        && \	
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.bash_functions  && \
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.bash_misc       && \	
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.bash_prompt     && \
-	wget https://raw.githubusercontent.com/chyld/devops/master/platforms/docker-python-node-workstation/.bashrc 
+RUN rm .bashrc
+ADD .gitconfig      .
+ADD .tmux.conf      .
+ADD .vimrc          .
+ADD .bash_aliases   .
+ADD .bash_colors    .
+ADD .bash_env       .
+ADD .bash_functions .
+ADD .bash_misc      .
+ADD .bash_prompt    .
+ADD .bashrc         .
 
 # Vim
 RUN curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim && \
@@ -51,3 +59,12 @@ RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh  
 	bash Miniconda3-latest-Linux-x86_64.sh -p /home/europa/.local/apps/miniconda3 -b   && \
 	chmod -R 500 /home/europa/.local/apps/miniconda3                                   && \
 	rm Miniconda3-latest-Linux-x86_64.sh
+
+# Node
+RUN wget https://nodejs.org/dist/v11.12.0/node-v11.12.0-linux-x64.tar.xz    && \
+	tar -xf node-v11.12.0-linux-x64.tar.xz                                  && \
+	mv node-v11.12.0-linux-x64 /home/europa/.local/apps/node
+
+# Final
+RUN source ~/.bashrc                   && \
+    conda create -n py37 python=3.7
