--- a/platforms/mint-ubuntu/v007/kitty.conf
+++ b/platforms/mint-ubuntu/v007/kitty.conf
@@ -3,4 +3,7 @@ bold_font        Operator Mono Medium
 italic_font      Operator Mono Book Italic
 bold_italic_font Operator Mono Medium Italic
 font_size 11
+adjust_line_height 100%
+adjust_column_width 90%
 include ./kitty-themes/themes/Desert.conf
+
