--- a/platforms/mint-ubuntu/v007/.tmux.conf
+++ b/platforms/mint-ubuntu/v007/.tmux.conf
@@ -1,3 +1,20 @@
 # make vim more responsive
 set-option -sg escape-time 0
 
+# Start window numbering at 1
+set -g base-index 1
+
+# Start pane numbering at 1
+setw -g pane-base-index 1
+
+# Set PREFIX key to Ctrl-a
+unbind C-b
+set -g prefix C-a
+
+# Enable mouse mode
+set -g mouse on
+
+# Change the split window bindings
+bind | split-window -h
+bind - split-window -v
+
