--- a/platforms/mint-ubuntu/v007/.tmux.conf
+++ b/platforms/mint-ubuntu/v007/.tmux.conf
@@ -18,3 +18,19 @@ set -g mouse on
 bind | split-window -h
 bind - split-window -v
 
+# Dracula configuration
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
+set -g @dracula-gpu-usage true
+set -g @dracula-show-weather false
+set -g @dracula-show-battery false
+set -g @dracula-show-timezone false
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+
