tmux switch windows

--- a/platforms/mint-ubuntu/v007/.tmux.conf
+++ b/platforms/mint-ubuntu/v007/.tmux.conf
@@ -18,6 +18,10 @@ set -g mouse on
 bind | split-window -h
 bind - split-window -v
 
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
 # Dracula configuration
 set -g @dracula-cpu-usage true
 set -g @dracula-ram-usage true
