--- a/platforms/mint-ubuntu/v007/.tmux.conf
+++ b/platforms/mint-ubuntu/v007/.tmux.conf
@@ -29,6 +29,7 @@ set -g @dracula-gpu-usage true
 set -g @dracula-show-weather false
 set -g @dracula-show-battery false
 set -g @dracula-show-timezone false
+set -g @dracula-show-powerline true
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
