update tmux config

--- a/platforms/mint-ubuntu/v009/.tmux.conf
+++ b/platforms/mint-ubuntu/v009/.tmux.conf
@@ -24,8 +24,8 @@ bind -n S-Right next-window
 
 # Dracula configuration
 set -g @dracula-cpu-usage true
-set -g @dracula-ram-usage true
-set -g @dracula-gpu-usage true
+set -g @dracula-ram-usage false
+set -g @dracula-gpu-usage false
 set -g @dracula-show-weather false
 set -g @dracula-show-battery false
 set -g @dracula-show-timezone false
