--- a/platforms/mint-ubuntu/v009/.tmux.conf
+++ b/platforms/mint-ubuntu/v009/.tmux.conf
@@ -23,13 +23,10 @@ bind -n S-Left  previous-window
 bind -n S-Right next-window
 
 # Dracula configuration
-set -g @dracula-cpu-usage true
-set -g @dracula-ram-usage false
-set -g @dracula-gpu-usage false
-set -g @dracula-show-weather false
-set -g @dracula-show-battery false
-set -g @dracula-show-timezone false
+# battery, cpu-usage, gpu-usage, ram-usage, network, network-bandwith, weather, time
+set -g @dracula-plugins "cpu-usage gpu-usage ram-usage time"
 set -g @dracula-show-powerline true
+set -g @dracula-show-timezone false
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
