--- a/platforms/mint-ubuntu/v009/kitty.conf
+++ b/platforms/mint-ubuntu/v009/kitty.conf
@@ -930,7 +930,7 @@ tab_bar_style powerline
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -944,7 +944,7 @@ tab_bar_style powerline
 #: from controlling kitty. Reloading the config will not affect this
 #: setting.
 
-# listen_on none
+listen_on unix:/tmp/kitty
 
 #: Tell kitty to listen to the specified unix/tcp socket for remote
 #: control connections. Note that this will apply to all kitty
