--- a/platforms/mint-ubuntu/v011/settings.json
+++ b/platforms/mint-ubuntu/v011/settings.json
@@ -7,7 +7,7 @@
 
   "files.trimTrailingWhitespace": true,
   "breadcrumbs.enabled": true,
-  "dev.containers.dockerPath": "podman",
+  "dev.containers.dockerPath": "docker",
 
   "editor.renderLineHighlight": "none",
   "editor.minimap.enabled": false,
