--- a/platforms/mint-ubuntu/v012/.tmux.conf
+++ b/platforms/mint-ubuntu/v012/.tmux.conf
@@ -1,3 +1,4 @@
+set -g escape-time 0
 set -g base-index 1
 set -g pane-base-index 1
 set -g mouse on
@@ -7,26 +8,35 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+# PREFIX + m : Maximize/Restore Pane Toggle
+bind -r m resize-pane -Z
+
 unbind %
 bind | split-window -h
 
 unbind '"'
 bind - split-window -v
 
+# SHIFT + Left/Right
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# FN + Arrow Keys
+bind -n Home select-pane -L
+bind -n End select-pane -R
+bind -n Pageup select-pane -U
+bind -n Pagedown select-pane -D
+
 # plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 
 # dracula customizations
-set -g @dracula-plugins "battery weather time"
+set -g @dracula-plugins "cpu-usage time"
 set -g @dracula-show-powerline true
-set -g @dracula-show-fahrenheit false
 set -g @dracula-military-time true
+set -g @dracula-show-timezone false
 
-bind -r m resize-pane -Z
 
 run '~/.tmux/plugins/tpm/tpm'
+
