--- a/platforms/mint-ubuntu/v012/.tmux.conf
+++ b/platforms/mint-ubuntu/v012/.tmux.conf
@@ -1,19 +1,21 @@
-set -g escape-time 0
-set -g base-index 1
-set -g pane-base-index 1
-set -g mouse on
-set -g default-terminal 'tmux-256color'
+set -sg escape-time 0                   # so you can go in and out of insert mode in vim quickly 
+set -g base-index 1                     # count windows starting at 1
+set -g pane-base-index 1                # count panes starting at 1
+set -g mouse on                         # enable mouse
+set -g default-terminal "tmux-256color" # for newer versions of tmux
+set -g history-limit 10000              # set scrollback buffer
 
+# change prefix
+unbind C-b
 set -g prefix C-a
-unbind-key C-b
-bind-key C-a send-prefix
+bind C-a send-prefix
 
 # PREFIX + m : Maximize/Restore Pane Toggle
 bind -r m resize-pane -Z
 
+# change the window split keys
 unbind %
 bind | split-window -h
-
 unbind '"'
 bind - split-window -v
 
@@ -37,6 +39,6 @@ set -g @dracula-show-powerline true
 set -g @dracula-military-time true
 set -g @dracula-show-timezone false
 
-
+# load plugins
 run '~/.tmux/plugins/tpm/tpm'
 
