--- a/scripts/macos/Dockerfile
+++ b/scripts/macos/Dockerfile
@@ -50,6 +50,8 @@ RUN cargo install tuc --features regex \
 RUN git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm \
     && ~/.tmux/plugins/tpm/bin/install_plugins
 
+# check this out! --- https://github.com/solidiquis/erdtree
+
 # RUN git clone https://github.com/LazyVim/starter ~/.config/nvim
 
 # RUN git clone https://github.com/AstroNvim/AstroNvim ~/.config/nvim \
