--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,9 @@ FROM archlinux:latest
 
 ENV TZ America/Los_Angeles
 
-RUN pacman -Sy --noconfirm
-RUN pacman -S  --noconfirm just ncdu sqlite watchexec tmux shellcheck starship cowsay wget git unzip neovim vim ripgrep fd bat hexyl htop tree inetutils exa inotify-tools lua luarocks xclip fzf glow duf bpytop lazygit openssh
-RUN pacman -S  --noconfirm --needed base-devel
+RUN pacman -Syu --noconfirm
+RUN pacman -S   --noconfirm just ncdu sqlite watchexec tmux shellcheck starship cowsay wget git unzip neovim vim ripgrep fd bat hexyl htop tree inetutils exa inotify-tools lua luarocks xclip fzf glow duf bpytop lazygit openssh
+RUN pacman -S   --noconfirm --needed base-devel
 
 RUN useradd -ms /bin/bash chyld \
     && echo "chyld:chyld" | chpasswd \
