--- a/platforms/mint-ubuntu/v012/.tmux.conf
+++ b/platforms/mint-ubuntu/v012/.tmux.conf
@@ -34,11 +34,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'dracula/tmux'
 
 # dracula customizations
-set -g @dracula-plugins "cpu-usage time"
+set -g @dracula-plugins "cpu-usage time git"
 set -g @dracula-show-powerline true
 set -g @dracula-military-time true
 set -g @dracula-show-timezone false
 
 # load plugins
 run '~/.tmux/plugins/tpm/tpm'
-
