--- a/scripts/kde/desktop/applications/umount.desktop
+++ b/scripts/kde/desktop/applications/umount.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=UMount
 Comment=Un-mounts the Share directory
 Exec=/home/chyld/Code/devops/scripts/kde/umount.sh
-Icon=drive-partition
+Icon=drive-removable-media
 Terminal=true
 Type=Application
 Categories=Utility;
