--- a/scripts/kde/desktop/applications/yay.desktop
+++ b/scripts/kde/desktop/applications/yay.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Yay
 Comment=Opens terminal and runs yay
 Exec=/home/chyld/Code/devops/scripts/kde/yay.sh
-Icon=go-home
+Icon=security-high
 Terminal=true
 Type=Application
 Categories=Utility;
