--- a/scripts/kde/desktop/applications/mount.desktop
+++ b/scripts/kde/desktop/applications/mount.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=Mount
 Comment=Mounts the Share directory
 Exec=/home/chyld/Code/devops/scripts/kde/mount.sh
-Icon=drive-removable-media
+Icon=vcs-added
 Terminal=true
 Type=Application
 Categories=Utility;
