starship python version

--- a/platforms/zzz/2025-02-macos/starship.toml
+++ b/platforms/zzz/2025-02-macos/starship.toml
@@ -2,3 +2,6 @@
 success_symbol = "[ ■](bold bright-white)"
 error_symbol   = "[ ■](bold bright-red)"
 
+[python]
+python_binary = [".venv/bin/python", "python"]
+
