--- a/platforms/zzz/2025-02-macos/.tmux.conf
+++ b/platforms/zzz/2025-02-macos/.tmux.conf
@@ -7,6 +7,9 @@ bind - split-window -v
 bind -n S-Left  previous-window             # no-prefix bind, only Shift + Left key
 bind -n S-Right next-window                 # no-prefix bind, only Shift + Right key
 
+bind -n S-Up   select-pane -t :.+           # just Shift + up to cycle through panes
+bind -n S-Down select-pane -t :.-           # just Shift + down to cycle through panes
+
 set -g default-terminal "tmux-256color"
 set -g mouse on
 
