--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -16,15 +16,10 @@ set -g mouse on
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
 
-# Dracula config
-set -g @dracula-plugins "git cwd"
-set -g @dracula-refresh-rate 2
-set -g @dracula-show-empty-plugins false
-set -g @dracula-show-flags true
-set -g @dracula-show-powerline true
-set -g @dracula-show-edge-icons true
+# Make it gorgeous
+set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @catppuccin_flavor 'mocha'       # latte, frappe, macchiato or mocha
 
 # Initialize TPM
 run '~/.tmux/plugins/tpm/tpm'
