--- a/dots/.tmux.conf
+++ b/dots/.tmux.conf
@@ -18,8 +18,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Make it gorgeous
-set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
-set -g @catppuccin_flavor 'mocha'       # latte, frappe, macchiato or mocha
+set -g @plugin "mark-pitblado/catppuccin-tmux"
+set -g status-position top
 
 # Initialize TPM
 run '~/.tmux/plugins/tpm/tpm'
