--- a/dots/linux/.tmux.conf
+++ b/dots/linux/.tmux.conf
@@ -18,7 +18,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Make it gorgeous
-set -g @plugin "mark-pitblado/catppuccin-tmux"
+set -g @plugin 'dracula/tmux'
+set -g @dracula-plugins "cpu-usage battery"
+set -g @dracula-show-powerline true
+set -g @dracula-transparent-powerline-bg true
+set -g @dracula-battery-label "♥ "
 set -g status-position top
 
 # Initialize TPM
