--- a/dots/linux/.tmux.conf
+++ b/dots/linux/.tmux.conf
@@ -10,6 +10,7 @@ bind -n S-Right next-window                 # no-prefix bind, only Shift + Right
 bind -n S-Up   select-pane -t :.+           # just Shift + up to cycle through panes
 bind -n S-Down select-pane -t :.-           # just Shift + down to cycle through panes
 
+set -g default-command "${SHELL}"
 set -g default-terminal "tmux-256color"
 set -g mouse on
 
@@ -21,7 +22,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-plugins "cpu-usage battery"
 set -g @dracula-show-powerline true
-set -g @dracula-transparent-powerline-bg true
 set -g @dracula-battery-label "♥ "
 set -g status-position top
 
