--- a/containers/debian_13/Dockerfile
+++ b/containers/debian_13/Dockerfile
@@ -2,8 +2,7 @@ FROM debian:trixie
 
 RUN apt update
 RUN apt install -y adduser sudo vim tree curl wget procps git
-RUN adduser --disabled-password --comment " " bob
-RUN adduser bob sudo
+RUN useradd -m -s /bin/bash bob && echo "bob:bob" | chpasswd && usermod -aG sudo bob
 WORKDIR /home/bob
 USER bob
 
